feat: allow deleting saved databases
